# ManagerScorePro

./: ai_advisor.py  components.py  database.py  main.py  manager_report_山田太郎_20241126_0610.md  manager_report_田中美咲_20241126_0505.md  models.py  pyproject.toml  report_generator.py  style.css  utils.py  visualization.py
docs/: api_documentation.md  project_specification.md  setup_guide.md
migrations/: env.py
migrations/versions/: create_evaluation_metrics.py  create_settings_tables.py  create_tables.py  initial_schema.py
pages/: 1_metrics.py  2_managers.py  3_Manager_Detail.py  3_manager_detail.py  4_Settings.py  _manager_detail.py  manager_detail.py
